syntax = "proto3";

package clarifai.api.status;

option go_package = "status";
option java_multiple_files = true;
option java_package = "com.clarifai.api.status";
option objc_class_prefix = "CAIP";

enum StatusCode {
  // to be revised and greatly expanded
  ZERO = 0;

  // success
  SUCCESS = 10000;
  MIXED_STATUS = 10010;
  FAILURE = 10020;
  TRY_AGAIN = 10030;
  //SUCCESS_WARNING_API_DEPRECATED = 10001;
  //SUCCESS_WARNING_CLIENT_DEPRECATED = 10002;

  // Clarifai Connection Codes: 11xxx
  CONN_ACCOUNT_ISSUES = 11000; // expired cc, still in trial, feature not supported in your tier
  CONN_TOKEN_INVALID = 11001; // invalid auth token used
  CONN_CREDENTIALS_INVALID = 11002; // invalid auth credentials
  CONN_EXCEED_HOURLY_LIMIT = 11003; // throttle hourly limit exceeded
  CONN_EXCEED_MONTHLY_LIMIT = 11004; // throttle monthly limit exceeded
  CONN_THROTTLED = 11005; // throttler and billing stuff
  CONN_EXCEEDS_LIMITS = 11006; // throttler and billing stuff
  CONN_INSUFFICIENT_SCOPES = 11007; // api key has insufficient permissions
  CONN_KEY_INVALID = 11008; // api key is invalid
  CONN_KEY_NOT_FOUND = 11009; // api key not found

  CONN_BAD_REQUEST_FORMAT = 11100; // multipart form parsing, broken json, etc
  CONN_DOES_NOT_EXIST = 11101; // when path is bad
  CONN_INVALID_REQUEST = 11102; // something wrong with a header
  CONN_METHOD_NOT_ALLOWED = 11103; // when a request method is not allowed
  CONN_NO_GDPR_CONSENT = 11104; // lack GDPR consent

  // Model/Custom Training related 20xxx
  MODEL_TRAINED = 21100; // Custom model has been already trained.
  MODEL_TRAINING = 21101; // Custom model is currently training.
  MODEL_UNTRAINED = 21102; // Custom model has not yet been trained.
  // Custom model is currently in queue for training, waiting on assets to process first.
  MODEL_QUEUED_FOR_TRAINING = 21103;

  MODEL_TRAINING_NO_DATA = 21110; // Custom model training had no data.
  MODEL_TRAINING_NO_POSITIVES = 21111; // Custom model training had no positive examples.
  MODEL_TRAINING_ONE_VS_N_SINGLE_CLASS = 21112; // Custom model training was ONE_VS_N but with a single class.
  MODEL_TRAINING_TIMED_OUT = 21113; // Training took longer than hard coded timeouts.
  MODEL_TRAINING_WAITING_ERROR = 21114; // Training got error waiting on asset pipeline to finish.
  MODEL_TRAINING_UNKNOWN_ERROR = 21115; // Training threw an unknown exception.
  MODEL_TRAINING_MSG_REDELIVER = 21116; // Training message was redelivered.
  MODEL_TRAINING_INCONSISTENT_DATA = 21117;
  MODEL_TRAINING_INVALID_PARAMS = 21118;

  MODEL_MODIFY_SUCCESS = 21150;
  MODEL_MODIFY_PENDING = 21151;
  MODEL_MODIFY_FAILED = 21152;

  MODEL_DOES_NOT_EXIST = 21200;
  MODEL_PERMISSION_DENIED = 21201;
  MODEL_INVALID_ARGUMENT = 21202;
  MODEL_INVALID_REQUEST = 21203;

  // Model Evaluation status codes

  MODEL_EVALUATED = 21300;
  MODEL_EVALUATING = 21301;
  MODEL_NOT_EVALUATED = 21302;
  MODEL_QUEUED_FOR_EVALUATION = 21303;

  MODEL_EVALUATION_TIMED_OUT = 21310; // Evaluation took longer than hard coded timeouts.
  MODEL_EVALUATION_WAITING_ERROR = 21311; // Evaluation got error waiting on asset pipeline to finish.
  MODEL_EVALUATION_UNKNOWN_ERROR = 21312; // EVALUATION THREW AN UNKNOWN EXCEPTION.

  MODEL_PREDICTION_FAILED = 21313;
  MODEL_EVALUATION_MSG_REDELIVER = 21314; // Eval message was redelivered.
  MODEL_EVALUATION_NEED_LABELS = 21315; // Don't have enough concepts labelled to perform evaluation
  MODEL_EVALUATION_NEED_INPUTS = 21316; // Don't have enough inputs per concept to perform evaluation
  // Status codes through 21319 (inclusive) reserved for model eval *errors* (per logic in clients)

  MODEL_DEPLOYMENT_FAILED = 21350; // Used when inference coordinator failed to deploy spire and throws an error
  MODEL_DEPLOYING = 21351; // Used when calling the inference coordinator to deploy a spire
  MODEL_QUEUED_FOR_DEPLOYMENT = 21352; // Used when training is completed
  MODEL_NOT_DEPLOYED = 21353; // Used when model spire deployment is manually taken down or due to inactivity

  // Workflow related 22xxx

  WORKFLOW_NO_MATCHING_INPUT = 22001; // specified model input not in workflow
  WORKFLOW_REQUIRE_TRAINED_MODEL = 22002; // specified model must be trained
  WORKFLOW_DUPLICATE = 22100;
  WORKFLOW_UNSUPPORTED_FORMAT = 22101;
  WORKFLOW_DOES_NOT_EXIST = 22102;
  WORKFLOW_PERMISSION_DENIED = 22103;
  WORKFLOW_INVALID_ARGUMENT = 22104; // error in the request somewhere
  WORKFLOW_INVALID_RECIPE = 22105;
  WORKFLOW_INVALID_TEMPLATE = 22106;
  WORKFLOW_INVALID_GRAPH = 22107;
  WORKFLOW_INTERNAL_FAILURE = 22108;

  WORKFLOW_INVALID_REQUEST = 22999; // error in the request somewhere

  WORKFLOW_MODIFY_SUCCESS = 22150;
  WORKFLOW_MODIFY_PENDING = 22151;
  WORKFLOW_MODIFY_FAILED = 22152;
  WORKFLOW_REINDEX_FAILED = 22153;

  // Concept related 23xxx
  CONCEPT_MODIFY_SUCCESS = 23150;
  CONCEPT_MODIFY_PENDING = 23151;
  CONCEPT_MODIFY_FAILED = 23152;

  // Annotation related 24xxx
  ANNOTATION_SUCCESS = 24150;
  ANNOTATION_PENDING = 24151;
  ANNOTATION_FAILED = 24152;
  ANNOTATION_IN_PROGRESS = 24153;
  ANNOTATION_UNKNOWN_STATUS = 24154;
  ANNOTATION_INVALID_ARGUMENT = 24155;
  ANNOTATION_PERMISSION_DENIED = 24156;
  ANNOTATION_AWAITING_REVIEW = 24157;

  ANNOTATION_MODIFY_SUCCESS = 24250;
  ANNOTATION_MODIFY_PENDING = 24251;
  ANNOTATION_MODIFY_FAILED = 24252;

  // Metadata related 249xx
  METADATA_INVALID_PATCH_ARGUMENTS = 24900;
  METADATA_PARSING_ISSUE = 24901;
  METADATA_MANIPULATION_ISSUE = 24902;

  // Training service related 25xxx
  TRAINER_JOB_STATE_NONE = 25000;
  TRAINER_JOB_STATE_QUEUED = 25001;
  TRAINER_JOB_STATE_RUNNING = 25002;
  TRAINER_JOB_STATE_COMPLETE = 25003;
  TRAINER_JOB_STATE_ERROR = 25004;

  // Data Dump related 251xx
  DATA_DUMP_SUCCESS = 25150;
  DATA_DUMP_PENDING = 25151;
  DATA_DUMP_FAILED = 25152;
  DATA_DUMP_IN_PROGRESS = 25153;

  // Duplicate related 252xx
  APP_DUPLICATION_SUCCESS = 25200;
  APP_DUPLICATION_FAILED = 25201;
  APP_DUPLICATION_PENDING = 25202;
  APP_DUPLICATION_IN_PROGRESS = 25203;

  // Input:Image related 30xxx
  INPUT_IMAGE_DOWNLOAD_SUCCESS = 30000;
  INPUT_IMAGE_DOWNLOAD_PENDING = 30001; // when things are async, this is the default status.
  INPUT_IMAGE_DOWNLOAD_FAILED = 30002; // any type of error downloading and processing
  INPUT_IMAGE_DOWNLOAD_IN_PROGRESS = 30003;
  INPUT_IMAGE_STATUS_UPDATE_FAILED = 30004;
  INPUT_IMAGE_DELETE_FAILED = 30005;
  INPUT_IMAGE_DUPLICATE = 30100;
  INPUT_IMAGE_UNSUPPORTED_FORMAT = 30101;
  INPUT_IMAGE_DOES_NOT_EXIST = 30102;
  INPUT_IMAGE_PERMISSION_DENIED = 30103;
  INPUT_IMAGE_INVALID_ARGUMENT = 30104;
  INPUT_IMAGE_OVER_LIMIT = 30105;
  INPUT_IMAGE_INVALID_URL = 30106;
  INPUT_IMAGE_MODIFY_SUCCESS = 30200;
  INPUT_IMAGE_MODIFY_PENDING = 30201;
  INPUT_IMAGE_MODIFY_FAILED = 30203;
  INPUT_IMAGE_STORAGE_HOST_FAILED = 30210;

  ALL_INPUT_IMAGES_INVALID_BYTES = 30300;

  INPUT_IMAGE_CLUSTER_SUCCESS = 30400;
  INPUT_IMAGE_CLUSTER_PENDING = 30401;
  INPUT_IMAGE_CLUSTER_FAILED = 30402;
  INPUT_IMAGE_CLUSTER_IN_PROGRESS = 30403;

  INPUT_IMAGE_REINDEX_SUCCESS = 30500;
  INPUT_IMAGE_REINDEX_PENDING = 30501;
  INPUT_IMAGE_REINDEX_FAILED = 30502;
  INPUT_IMAGE_REINDEX_IN_PROGRESS = 30503;

  // Input:Video related 31xxx
  INPUT_VIDEO_DOWNLOAD_SUCCESS = 31000;
  INPUT_VIDEO_DOWNLOAD_PENDING = 31001;
  INPUT_VIDEO_DOWNLOAD_FAILED = 31002;
  INPUT_VIDEO_DUPLICATE = 31100;
  INPUT_VIDEO_UNSUPPORTED_FORMAT = 31101;
  INPUT_VIDEO_DOES_NOT_EXIST = 31102;
  INPUT_VIDEO_PERMISSION_DENIED = 31103;
  INPUT_VIDEO_INVALID_ARGUMENT = 31104;
  INPUT_VIDEO_OVER_LIMIT = 31105;
  INPUT_VIDEO_INVALID_URL = 31106;
  INPUT_VIDEO_MODIFY_SUCCESS = 31200;
  INPUT_VIDEO_MODIFY_PENDING = 31201;
  INPUT_VIDEO_MODIFY_FAILED = 31203;
  INPUT_VIDEO_STORAGE_HOST_FAILED = 31210;

  ALL_INPUT_VIDEOS_INVALID_BYTES = 31300;

  // TODO: Input:Audio related 32xxx
  // TODO: Input:Text related 33xxx

  INPUT_PERMISSION_DENIED = 39995;
  INPUT_CONNECTION_FAILED = 39996;
  REQUEST_DISABLED_FOR_MAINTENANCE = 39997;
  INPUT_WRITES_DISABLED_FOR_MAINTENANCE = 39998;
  INPUT_INVALID_REQUEST = 39999;

  // API formatting issues 4000x
  PREDICT_INVALID_REQUEST = 40001;
  SEARCH_INVALID_REQUEST = 40002;
  CONCEPTS_INVALID_REQUEST = 40003;

  // Other related 400xx
  DATABASE_DUPLICATE_KEY = 40010;
  DATABASE_STATEMENT_TIMEOUT = 40011;
  DATABASE_INVALID_ROWS_AFFECTED = 40012;
  DATABASE_DEADLOCK_DETECTED = 40013;
  DATABASE_FAIL_TASK = 40014;
  DATABASE_FAIL_TO_GET_CONNECTIONS = 40015;
  DATABASE_TOO_MANY_CLIENTS = 40016;
  DATABASE_CONSTRAINT_VIOLATED = 40017;
  DATABASE_NO_ONGOING_OPERATIONS = 40018;
  DATABASE_LOCKED_BY_ONGOING_OPERATION = 40019;


  ASYNC_WORKER_MULTI_ERRORS = 40020;
  RPC_REQUEST_QUEUE_FULL = 40030;
  RPC_SERVER_UNAVAILABLE = 40031;
  RPC_REQUEST_TIMEOUT = 40032;
  RPC_MAX_MESSAGE_SIZE_EXCEEDED = 40033;
  RPC_CANCELED = 40035;
  CLUSTER_INTERNAL_FAILURE = 43040;

  EXTERNAL_CONNECTION_ERROR = 40034; // could not connect to external services

  // Queue related errors 41xxx
  QUEUE_CONN_ERROR = 41000;
  QUEUE_CLOSE_REQUEST_TIMEOUT = 41002;
  QUEUE_CONN_CLOSED = 41003;
  QUEUE_PUBLISH_ACK_TIMEOUT = 41004;
  QUEUE_PUBLISH_ERROR = 41005;
  QUEUE_SUBSCRIPTION_TIMEOUT = 41006;
  QUEUE_SUBSCRIPTION_ERROR = 41007;
  QUEUE_MARSHALLING_FAILED = 41008;
  QUEUE_UNMARSHALLING_FAILED = 41009;
  QUEUE_MAX_MSG_REDELIVERY_EXCEEDED = 41010;
  QUEUE_ACK_FAILURE = 41011;

  // SQS related errors 411xx
  SQS_OVERLIMIT = 41100;
  SQS_INVALID_RECEIPT_HANDLE = 41101;
  SQS_UNKNOWN = 41102;

  // KAFKA related errros 412xx
  KAFKA_UNKNOW = 41200;
  KAFKA_MISSING_TOPIC = 41201;
  KAFKA_ADMIN_ERR = 41202;
  KAFKA_CONSUMER_ERR = 41203;
  KAFKA_PUBLISHER_ERR = 41204;

  //Search related errors 43xxxx
  SEARCH_INTERNAL_FAILURE = 43001;
  SEARCH_PROJECTION_FAILURE = 43002;
  SEARCH_PREDICTION_FAILURE = 43003;
  SEARCH_BY_NOT_FULLY_INDEXED_INPUT = 43004;
  SAVED_SEARCH_MODIFY_FAILED = 43005;

  // Stripe 44xxx
  STRIPE_EVENT_ERROR = 44001;

  // Redis/Cache 45xxx
  CACHE_MISS = 45001;
  REDIS_SCRIPT_EXITED_WITH_FAILURE = 45002;

  // Sift Science 46xxx
  SIGNUP_EVENT_ERROR = 46001;
  SIGNUP_FLAGGED = 46002;
  FILETYPE_UNSUPPORTED = 46003;

  // Application counts related errors 470xx
  APP_COUNT_INVALID_MESSAGE = 47001;
  APP_COUNT_UPDATE_INCREMENT_FAILED = 47002;
  APP_COUNT_REBUILD_FAILED = 47003;
  APP_COUNT_INTERNAL_FAILURE = 47004;

  // Media processor related errors 471xx
  MP_DOWNLOAD_ERROR = 47101;
  MP_RESOLVE_DNS_ERROR = 47102;
  MP_DOWNLOAD_MAX_SIZE_EXCEEDED_ERROR = 47103;
  MP_IMAGE_DECODE_ERROR = 47104;
  MP_INVALID_ARGUMENT = 47105;
  MP_IMAGE_PROCESSING_ERROR = 47106;

  // User legal consent stauts related 50xxx
  USER_CONSENT_FACE = 50001;

  // Workers 51xxx
  WORKER_MISSING = 51000;
  WORKER_ACTIVE = 51001;
  WORKER_INACTIVE = 51002;

  // Collectors 52xxx
  COLLECTOR_MISSING = 52000;
  COLLECTOR_ACTIVE = 52001;
  COLLECTOR_INACTIVE = 52002;

  // License Related Status Code 600xx
  LICENSE_ACTIVE = 60000;
  LICENSE_DOES_NOT_EXIST = 60001;
  LICENSE_NEED_UPDATE = 60002;
  LICENSE_EXPIRED = 60003;
  LICENSE_REVOKED = 60004;
  LICENSE_DELETED = 60005; // hidden state not reflected to users
  LICENSE_VOLUME_EXCEEDED = 60006;

  // TODO: Knowledge graph related 80xxx

  // Internal issues: 98xxx
  INTERNAL_SERVER_ISSUE = 98004;
  INTERNAL_FETCHING_ISSUE = 98005;
  INTERNAL_DATABASE_ISSUE = 98006;
  INTERNAL_UNEXPECTED_TIMEOUT = 98009;
  INTERNAL_UNEXPECTED_V1 = 98010;
  INTERNAL_UNEXPECTED_PANIC = 98011;
  INTERNAL_UNEXPECTED_SPIRE = 98012;
  INTERNAL_REDIS_UNAVAILABLE = 98013;
  INTERNAL_RESOURCE_EXHAUSTED = 98014;
  INTERNAL_REDIS_UNCATEGORIZED = 98015;
  INTERNAL_AWS_UNCATEGORIZED = 98016;
  INTERNAL_AZURE_UNCATEGORIZED = 98017;

  // Uncategorized: 99xxx: move off as soon as known
  CONN_UNCATEGORIZED = 99001;
  MODEL_UNCATEGORIZED = 99002;
  INPUT_UNCATEGORIZED = 99003;
  ANNOTATION_UNCATEGORIZED = 99004;
  INTERNAL_UNCATEGORIZED = 99009;

  // Depreciated codes: migrate off these to one of the internal issues
  BAD_REQUEST = 90400;
  SERVER_ERROR = 90500;
}
